// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should show the result of a multiple tags 1`] = `
"
    <p
    class=\\" text-gray-500\\"
  >
    You guessed
    <span
      class=\\"text-blue-800 font-bold\\"
    >
       35 tags 
    </span>
    in
     
    <span
      class=\\"text-blue-800 font-bold\\"
    >
      123
       seconds
    </span>
    !
  </p>
    "
`;

exports[`Modal should show the result of a single tag 1`] = `
"
    <p
    class=\\" text-gray-500\\"
  >
    You guessed
    <span
      class=\\"text-blue-800 font-bold\\"
    >
       1 tag
    </span>
    in
     
    <span
      class=\\"text-blue-800 font-bold\\"
    >
      123
       seconds
    </span>
    !
  </p>
    "
`;
